# sort

./: CMakeLists.txt  Sortt.cpp  array.h  arrayseqt.cpp  arraysequence.h  arrayt.cpp  classes.h  iteratorarray.h  linefunc.h  linefunct.cpp  linkedlist.h  listseqt.cpp  listsequence.h  listt.cpp  main.cpp  main.py  myexception.h  sequence.h  trash.cpp  vector.h  vectort.cpp
